# CamOdomCalibraTool

./: CMakeLists.txt  README.md  config.yaml  package.xml
camOdoCalib/include/: data_selection.h  solveQyx.h  solver.h
camOdoCalib/launch/: S800.launch
camOdoCalib/src/: main_node.cpp  solveQyx.cpp  solver.cpp
camOdoCalib/src/calc_cam_pose/: calcCamPose.cpp  calcCamPose.h
camOdoCalib/src/calc_cam_pose/ethz_apriltag/: Quad.cc  Quad.h  TagDetection.cc  TagDetector.cc
camOdoCalib/src/camera_models/include/: Camera.h
camOdoCalib/src/data_selection/: data_selection.cpp
simulateData/: CMakeLists.txt  config.yaml  main.cpp  simulateOdoCam.cpp  simulateOdoCam.h
simulateData/output/: cam_sinSpeed.txt  cam_sinSpeed2.txt  odo_sinSpeed.txt  odo_sinSpeed2.txt
